--- a/LBW/Views/Auditoria/AuditoriaV.cshtml
+++ b/LBW/Views/Auditoria/AuditoriaV.cshtml
@@ -52,7 +52,7 @@
                 <path d="M21 15v6" />
             </svg>
             <h2 class="page-title-home">
-                Auditoria de Resultado
+                Auditoria del Cliente
             </h2>
         </div>
     </div>
@@ -60,4 +60,48 @@
 }
 
 
+  @(Html.DevExtreme().DataGrid<LBW.Models.Entity.AuditoriaResultado>()
+    .DataSource(ds => ds.Mvc()
+        .Controller("AuditoriaResultadoes")
+        .LoadAction("Get")
+        .Key("Id")
+    )
+    .FilterRow(filterRow => filterRow
+        .Visible(true)
+        .ApplyFilter(GridApplyFilterMode.Auto)
+    )
+     .HeaderFilter(headerFilter => headerFilter.Visible(true).Width(400))
+    .Paging(paging => paging.PageSize(10))
+    .Pager(pager =>
+    {
+        pager.Visible(true);
+        pager.DisplayMode(GridPagerDisplayMode.Full);
+        pager.ShowPageSizeSelector(true);
+        pager.AllowedPageSizes(new JS("[5, 10, 'all']"));
+        pager.ShowInfo(true);
+        pager.ShowNavigationButtons(true);
+    })
+     
+ 
+ 
+    .ShowBorders(true)
+    .RemoteOperations(true)
+    .Columns(columns => {
 
+        columns.AddFor(m => m.Fecha_N).Caption("Fecha").Format("dd/MM/yyyy");
+
+        columns.AddFor(m => m.Analisis).Caption("Análisis");
+
+        columns.AddFor(m => m.Muestra);
+
+        columns.AddFor(m => m.OldValue).Caption("Valor Antiguo").Width(100);
+
+        columns.AddFor(m => m.NewValue)
+                .Caption("Nuevo Valor");
+
+        columns.AddFor(m => m.Cliente);
+
+        columns.AddFor(m => m.Proyecto).GroupIndex(0);
+    })
+)
+ 
