--- a/LBW/Views/Auditoria/AuditoriaV.cshtml
+++ b/LBW/Views/Auditoria/AuditoriaV.cshtml
@@ -81,7 +81,11 @@
         pager.ShowInfo(true);
         pager.ShowNavigationButtons(true);
     })
-     
+      .CustomizeColumns(@<text>
+    function(columns) {
+    columns[1].dataType = "string";
+    }
+    </text>)
  
  
     .ShowBorders(true)
@@ -89,7 +93,7 @@
     .Columns(columns => {
 
         columns.AddFor(m => m.Fecha_N).Caption("Fecha").Format("dd/MM/yyyy");
-
+        columns.AddFor(m => m.Fecha).Caption("Hora").Format("HH:mm:ss");
         columns.AddFor(m => m.Analisis).Caption("Análisis");
 
         columns.AddFor(m => m.Muestra);
@@ -101,7 +105,15 @@
 
         columns.AddFor(m => m.Cliente);
 
+        columns.AddFor(m => m.Login).Lookup(lookup => lookup
+                       .DataSource(ds => ds.WebApi().Controller("Muestras").LoadAction("Usuarios1Lookup").Key("Value"))
+                       .ValueExpr("Value")
+                       .DisplayExpr("Text")).Caption("Usuario");
+
+
         columns.AddFor(m => m.Proyecto).GroupIndex(0);
+
+
     })
 )
  
