--- a/LBW/Views/Auditoria/AuditoriaV.cshtml
+++ b/LBW/Views/Auditoria/AuditoriaV.cshtml
@@ -52,7 +52,7 @@
                 <path d="M21 15v6" />
             </svg>
             <h2 class="page-title-home">
-                Auditoria del Cliente
+                Auditoria
             </h2>
         </div>
     </div>
