--- a/LBW/Views/PerfilUsuario/Perfil.cshtml
+++ b/LBW/Views/PerfilUsuario/Perfil.cshtml
@@ -80,6 +80,8 @@
             .ValueExpr("Value")
             .DisplayExpr("Text")
             ).Caption("Rol");
+        columns.AddFor(m => m.ConCopia).Caption("CC");
+        columns.AddFor(m => m.Clientes).Visible(false);
 
  
     })
@@ -109,6 +111,8 @@
                         .DataField("Password");
                         groupItems.AddSimpleFor(m => m.IdRol);
                         groupItems.AddSimpleFor(m => m.Correo);
+                        groupItems.AddSimpleFor(m => m.ConCopia);
+                        groupItems.AddSimpleFor(m => m.Clientes);
 
                     });
 
